# any-voicechat

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  documentation.md  package-lock.json  pyproject.toml  run.sh  start_frontend.sh  start_servers.sh
api/: DOCUMENTATION.md  README.md  analyse.py  analyse_logic.py  api_key.py  apps.py  auth.py  avatar.py  context.py  create_agent.py  database.py  default_settings.json  dependencies.py  deps.py  documents.py  exceptions.py  export_openapi.py  main.py  models.py  result_docs.py  schemas.py  settings.py  take_notes.py  utils.py  verify_api_key.py  voice_agent.py  websocket.py
app_examples/: casual_chat.json  comefort_chat.json  comfort_chat.json  empathic_ear.json  interview_simulator.json  language_pal.json  story_architect.json
app_settings/: interview_simulator.json  story_architect.json
core/: analyse.py  config.py  default_settings.json  prompt.py  settings.py  take_notes.py  voice_agent.py
default_context/: cv.md  interview_analysis.md  job_description.md  role_description.md
default_settings/: cv.md  role_description.md
docs/: DOCUMENTATION.md  auth.md  index.html  index.md  interview_simulator_example.html
example/: cv.md  interview-note.md  interview_note.md  job_description.md  role_description.md
frontend/: DOCUMENTATION.md  GEMINI.md  README.md  index.html  package-lock.json  package.json  start_servers.sh  test.md  vite.config.js  vitest.config.js
interviewer/: agent.py  prompt.py  settings.py  tools.py
logos/: index.html
scripts/: verify_avatar_editor.py  (+1 more)
(+90 files in other folders)
