[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*"]
namespaces = false

[project]
name = "vox"
version = "0.1.0"
scripts = {api = "api.main:main", vox = "run.sh"}

dependencies = [
    "google-genai",
    "google-adk==1.8.0",
    "aiofiles",
    "pytest",
    "pytest-asyncio",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "websockets"
]
